--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
 /*
-Theme Name: Twenty Fifteen
+Theme Name: Metanomalies
 Theme URI: http://metanomalies.com
 Author: The Metanomalies Team
 Author URI: https://metanomalies.org/
-Description: This is the main metanomalies theme based initially on the twenty fifteen theme
+Description: This is the main metanomalies theme 
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: black, blue, gray, pink, purple, white, yellow, dark, light, two-columns, left-sidebar, fixed-layout, responsive-layout, accessibility-ready, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, threaded-comments, translation-ready
-Text Domain: twentyfifteen
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
+Tags: mobile, communities
+Text Domain: metanomalies
 */
